Updated due to feedback: - Made the pre-JDK9 access handler the default for all Java versions. - Changed the control flag to enable users to "opt-in" to the alternate JDK9+ access handler (only effective if JDK9+ detected). - Updated comments to reflect the new changes.